second commit added h2 tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <h1>Hello</h1>
 
+    <h2>Yash is a genius</h2>
+
     <div class="name">Yashasav</div>
 
     <div class="hello">Hello I am a bot</div>
