--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     <div class="name">Yashasav</div>
 
-    <div class="hello">Hello I am a bot</div>
+    <div id="hello">Hello I am a bot</div>
+
+    <div class="container">
+        <div class="photo">Gopal bhadwa hai</div>
+        <div class="photo">Gopal Gandu hai</div>
+    </div>
 
 
     <script src="script.js"></script>
